{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 5,
  "lineage": "ac10a18a-2b96-0139-e935-2c59d12564bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385141744135:security-group/sg-0a4c80554dfb07008",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a4c80554dfb07008",
            "ingress": [],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "385141744135",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test security group"
            },
            "tags_all": {
              "Name": "test security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5bf8cc59fc1789a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-58364726",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a4c80554dfb07008",
            "security_group_rule_id": "sgr-0f726330060342bd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1501004257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a4c80554dfb07008",
            "security_group_rule_id": "sgr-0ed33aa14b034b7f4",
            "self": false,
            "source_security_group_id": "sg-0047a56a9231e7c38",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-696278231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a4c80554dfb07008",
            "security_group_rule_id": "sgr-018c8a6076333b801",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    }
  ]
}